2002-07-09  Sam Steingold  <sds@gnu.org>

	* bindings/linuxlibc6/linux.lisp (read): added commas before
	arguments in backquote

2002-07-09  Sam Steingold  <sds@gnu.org>

	* complete.lisp (completion): consider the situation FUNCTIONALP
	when start==end, this fixes the "(finalize TAB" bug)

2002-07-09  Sam Steingold  <sds@gnu.org>

	* pathname.d (PARSE-NAMESTRING): barf on symbols when
	CUSTOM:*PARSE-NAMESTRING-ANSI* is non-NIL
	(FILE-STAT-INTERNAL): use coerce_pathname()

2002-07-08  Sam Steingold  <sds@gnu.org>

	* clos.lisp (check-metaclass-mix): new function
	(initialize-instance-standard-class, make-instance-built-in-class):
	(initialize-instance-structure-class): use it

2002-07-02  Sam Steingold  <sds@gnu.org>

	* _clisp.c [STDC_HEADERS]: #include <stdlib.h> (HAVE_STDLIB_H is
	obsolete)

2002-07-01  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): removed the obsolete -W option for the sake of
	the CYGWIN port getting "-M c:/gnu/clisp/lispinit.mem"
	* _clisp.c (main): ditto

2002-07-01  LaMont Jones  <lamont@smallone.fc.hp.com>

	* ffcall/callback/trampoline_r/trampoline.c (alloc_trampoline_r)
	(is_tramp): work around a bug in gcc 3.*
	* ffcall/avcall/avcall-hppa.s:
	* ffcall/callback/trampoline_r/cache-hppa.s:
	* ffcall/callback/trampoline_r/proto-hppa.s:
	* ffcall/callback/trampoline_r/tramp-hppa.s:
	* ffcall/callback/vacall_r/vacall-hppa.s:
	* ffcall/trampoline/cache-hppa.s:
	* ffcall/trampoline/proto-hppa.s:
	* ffcall/trampoline/tramp-hppa.s:
	* ffcall/vacall/vacall-hppa.s:
	support both HP-UX assembler and GAS

2002-07-01  Sam Steingold  <sds@gnu.org>

	* makemake.in (echotab_mkdir_maybe): pass `-p' to mkdir(1)
	(shared): new make var; create it before doc dirs

2002-06-29  Sam Steingold  <sds@gnu.org>

	implemented feature request [ 575303 ]: quit to top-level in debugger
	* reploop.lisp (debug-quit): new function
	(commands1): document `Quit/:q'
	(break-loop, step-hook-fn): handle it (as `abort-to-top')
	* control.d (UNWIND-TO-TOP): new function