@@ -55,6 +55,14 @@ User visible changes
 * New debugger command Quit (:q) aborts to the top-level read-eval-print
   loop immediately, saving you typing :a several times.
 
+* When CUSTOM:*PARSE-NAMESTRING-ANSI* is non-NIL, do not accept symbols
+  as pathname designators.
+  See <http://clisp.cons.org/impnotes.html#filename-dict> for details.
+
+* COMPILE-FILE no longer clobbers an existing *.c file when the Lisp
+  file being compiled does not contain any FFI forms.
+  See <http://clisp.cons.org/impnotes.html#compilefile> for details.
+
 * Fixed a bug: Conversion from bytes to string did not work for the encoding
   (MAKE-ENCODING :CHARSET CHARSET:UNICODE-32-LITTLE-ENDIAN
                  :INPUT-ERROR-ACTION :IGNORE).
